Update CORS configuration and frontend URL