@@ -17,6 +17,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -27,8 +28,7 @@ public class SecurityConfig {
     @Autowired
     private JwtFilter jwtFilter;
 
-    // 🚀 Load production frontend URL from environment variable
-    @Value("${frontend.url:https://localhost}")
+    @Value("${frontend.url:http://localhost:3000}")
     private String frontendUrl;
 
     @Bean
@@ -38,21 +38,17 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/auth/**", "/v3/api-docs/**", "/swagger-ui/**").permitAll()
                         .requestMatchers("/api/products/**", "/api/categories/**").permitAll()
-
                         .requestMatchers("/api/orders/admin/**").hasAuthority("ADMIN")
                         .requestMatchers("/api/admin/**").hasAuthority("ADMIN")
-
                         .requestMatchers("/api/cart/**").authenticated()
                         .requestMatchers("/api/orders/**").authenticated()
                         .requestMatchers("/api/reviews/**").authenticated()
-
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session ->
@@ -66,19 +62,33 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        configuration.setAllowedOrigins(
-                List.of(
-                        "http://localhost:3000",       // ✔ Local frontend
-                        frontendUrl                   // ✔ Production frontend (Vercel)
-                )
-        );
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        
+        //  Allow all Vercel deployments + localhost
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:*",
+                "https://*.vercel.app"
+        ));
+        
+        //  Allow all necessary methods
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+        ));
+        
+        //  Allow all headers
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        
+        //  Allow credentials (cookies, authorization headers)
         configuration.setAllowCredentials(true);
+        
+        //  Expose headers for frontend to read
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        
+        //  Cache preflight requests for 1 hour
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+        
         return source;
     }
 }
